# solana-token-scraper

./: .gitignore  README.md  config.json  pyproject.toml
docs/plans/: 2026-01-21-solana-token-scraper-design.md
src/: config_manager.py  dashboard.py  dexscreener_client.py  main.py  token_cache.py  token_filter.py
tests/: test_config_manager.py  test_dashboard.py  test_dexscreener_client.py  test_integration.py  test_main.py  test_token_cache.py  test_token_filter.py
tests/fixtures/: mock_dexscreener_response.json
